code25_all/scala/1701001.txt
scala> val l = List((1,2), (2,3))
l: List[(Int, Int)] = List((1,2), (2,3))

scala>  (0 /: l) {(a, i) => i._1 + a}
res20: Int = 3

scala> (0 /: l) {(a, (b,c)) => b + a}
<console>:1: error: not a legal formal parameter
       (0 /: l) {(a, (b,c)) => b + a}
                     ^

scala> (0 /: l) {(a, i) => val (b, c) = i; b + a}
res0: Int = 3

